@@ -41,6 +41,8 @@ import java.net.ConnectException;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.SocketTimeoutException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.security.GeneralSecurityException;
 import java.security.KeyStoreException;
@@ -62,8 +64,8 @@ import javax.xml.crypto.dsig.dom.DOMSignContext;
 
 import org.apache.commons.io.output.UnsynchronizedByteArrayOutputStream;
 import org.apache.jcp.xml.dsig.internal.dom.DOMSignedInfo;
-import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.apache.poi.logging.PoiLogManager;
 import org.apache.poi.EncryptedDocumentException;
 import org.apache.poi.POIDataSamples;
 import org.apache.poi.POITestCase;
@@ -126,7 +128,7 @@ import org.w3.x2000.x09.xmldsig.SignatureDocument;
 import org.w3c.dom.Document;
 
 class TestSignatureInfo {
-    private static final Logger LOG = LogManager.getLogger(TestSignatureInfo.class);
+    private static final Logger LOG = PoiLogManager.getLogger(TestSignatureInfo.class);
     private static final POIDataSamples testdata = POIDataSamples.getXmlDSignInstance();
     private static final String STORE_PASS = "test";
 
@@ -209,7 +211,7 @@ class TestSignatureInfo {
         SignatureInfo si = new SignatureInfo();
         si.setSignatureConfig(signatureConfig);
 
-        UnsynchronizedByteArrayOutputStream bos = new UnsynchronizedByteArrayOutputStream(100000);
+        UnsynchronizedByteArrayOutputStream bos = UnsynchronizedByteArrayOutputStream.builder().setBufferSize(100000).get();
         try (XSSFWorkbook wb1 = new XSSFWorkbook()) {
             wb1.createSheet().createRow(1).createCell(1).setCellValue("Test");
             wb1.write(bos);
@@ -252,7 +254,17 @@ class TestSignatureInfo {
             si.setOpcPackage(pkg);
             si.setSignatureConfig(sic);
             boolean isValid = si.verifySignature();
-            assertTrue(isValid);
+
+            // We reported https://bugs.openjdk.org/browse/JDK-8320597 because of this, it will be fixed in JDK 22
+            // and maybe in newer JDK 21 patch-levels
+            assumeTrue(isValid && !"21.0.1".equals(System.getProperty("java.version")),
+                    "This fails on JDK 21.0.1, see https://bugs.openjdk.org/browse/JDK-8320597");
+
+            assertTrue(isValid,
+                    // add some details to find out why "verifySignature()" returns false sometimes
+                    "Failed for " + System.getProperty("java.version") +
+                            ": Verifying signature failed, hasNext: " + si.getSignatureParts().iterator().hasNext() + ": " +
+                            (si.getSignatureParts().iterator().hasNext() ? si.getSignatureParts().iterator() : ""));
         }
     }
 
@@ -426,7 +438,7 @@ class TestSignatureInfo {
     void testSignEnvelopingDocument() throws Exception {
         String testFile = "hello-world-unsigned.xlsx";
         File sigCopy = testdata.getFile(testFile);
-        UnsynchronizedByteArrayOutputStream bos = new UnsynchronizedByteArrayOutputStream(50000);
+        UnsynchronizedByteArrayOutputStream bos = UnsynchronizedByteArrayOutputStream.builder().setBufferSize(50000).get();
 
         final String execTimestr;
 
@@ -587,8 +599,8 @@ class TestSignatureInfo {
     public static String getAccessError(String destinationUrl, boolean fireRequest, int timeout) {
         URL url;
         try {
-            url = new URL(destinationUrl);
-        } catch (MalformedURLException e) {
+            url = new URI(destinationUrl).toURL();
+        } catch (MalformedURLException | URISyntaxException e) {
             throw new IllegalArgumentException("Invalid destination URL", e);
         }
 
@@ -698,7 +710,7 @@ class TestSignatureInfo {
         DummyKeystore ks = new DummyKeystore(STORE_PASS);
         KeyCertPair certPair = ks.createDummyKey();
 
-        UnsynchronizedByteArrayOutputStream bos = new UnsynchronizedByteArrayOutputStream();
+        UnsynchronizedByteArrayOutputStream bos = UnsynchronizedByteArrayOutputStream.builder().get();
         try (XWPFDocument doc = new XWPFDocument()) {
             XWPFHyperlinkRun r = doc.createParagraph().createHyperlinkRun("http://poi.apache.org");
             r.setText("Hyperlink");
@@ -743,7 +755,7 @@ class TestSignatureInfo {
         try (SXSSFWorkbook wb1 = new SXSSFWorkbook((XSSFWorkbook)WorkbookFactory.create(tpl), 10)) {
             wb1.setCompressTempFiles(true);
             wb1.removeSheetAt(0);
-            UnsynchronizedByteArrayOutputStream os = new UnsynchronizedByteArrayOutputStream();
+            UnsynchronizedByteArrayOutputStream os = UnsynchronizedByteArrayOutputStream.builder().get();
             wb1.write(os);
 
             try (OPCPackage pkg = OPCPackage.open(os.toInputStream())) {
@@ -888,7 +900,7 @@ class TestSignatureInfo {
             throw e;
         }
 
-        UnsynchronizedByteArrayOutputStream bos = new UnsynchronizedByteArrayOutputStream();
+        UnsynchronizedByteArrayOutputStream bos = UnsynchronizedByteArrayOutputStream.builder().get();
         try (XSSFWorkbook wb = new XSSFWorkbook()) {
             wb.createSheet().createRow(0).createCell(0).setCellValue("Test");
             wb.write(bos);
@@ -1075,7 +1087,7 @@ class TestSignatureInfo {
             throw e;
         }
 
-        UnsynchronizedByteArrayOutputStream bos = new UnsynchronizedByteArrayOutputStream();
+        UnsynchronizedByteArrayOutputStream bos = UnsynchronizedByteArrayOutputStream.builder().get();
         try (XSSFWorkbook wb = new XSSFWorkbook()) {
             wb.createSheet().createRow(0).createCell(0).setCellValue("test");
             wb.write(bos);
