@@ -18,19 +18,20 @@
 package org.apache.poi.ss.formula.function;
 
 import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.PrintStream;
+import java.io.UncheckedIOException;
 import java.io.UnsupportedEncodingException;
 import java.math.BigInteger;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.security.MessageDigest;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -168,11 +169,11 @@ public final class ExcelFileFormatDocFunctionExtractor {
             _groupFunctionNames = new HashSet<>();
         }
 
-        public void addFuntion(int funcIx, boolean hasFootnote, String funcName, int minParams, int maxParams,
-                String returnClass, String paramClasses, String volatileFlagStr) {
-            boolean isVolatile = volatileFlagStr.length() > 0;
+        public void addFunction(int funcIx, boolean hasFootnote, String funcName, int minParams, int maxParams,
+                                String returnClass, String paramClasses, String volatileFlagStr) {
+            boolean isVolatile = !volatileFlagStr.isEmpty();
 
-            Integer funcIxKey = Integer.valueOf(funcIx);
+            Integer funcIxKey = funcIx;
             if(!_groupFunctionIndexes.add(funcIxKey)) {
                 throw new RuntimeException("Duplicate function index (" + funcIx + ")");
             }
@@ -210,7 +211,7 @@ public final class ExcelFileFormatDocFunctionExtractor {
                     throw new RuntimeException("changing function '"
                             + funcName + "' definition without foot-note");
                 }
-                _allFunctionsByIndex.remove(Integer.valueOf(fdPrev.getIndex()));
+                _allFunctionsByIndex.remove(fdPrev.getIndex());
             }
         }
 
@@ -327,7 +328,7 @@ public final class ExcelFileFormatDocFunctionExtractor {
                     processTableRow(cellData, noteFlags);
                 } else if(matchesRelPath(TABLE_CELL_RELPATH_NAMES)) {
                     _rowData.add(_textNodeBuffer.toString().trim());
-                    _rowNoteFlags.add(Boolean.valueOf(_cellHasNote));
+                    _rowNoteFlags.add(_cellHasNote);
                     _textNodeBuffer.setLength(0);
                 }
             }
@@ -351,7 +352,7 @@ public final class ExcelFileFormatDocFunctionExtractor {
             }
             int funcIx = parseInt(funcIxStr);
 
-            boolean hasFootnote = noteFlags[i + 1].booleanValue();
+            boolean hasFootnote = noteFlags[i + 1];
             String funcName = cellData[i + 1];
             int minParams = parseInt(cellData[i + 2]);
             int maxParams = parseInt(cellData[i + 3]);
@@ -360,7 +361,7 @@ public final class ExcelFileFormatDocFunctionExtractor {
             String paramClasses = cellData[i + 5];
             String volatileFlagStr = cellData[i + 6];
 
-            _fdc.addFuntion(funcIx, hasFootnote, funcName, minParams, maxParams, returnClass, paramClasses, volatileFlagStr);
+            _fdc.addFunction(funcIx, hasFootnote, funcName, minParams, maxParams, returnClass, paramClasses, volatileFlagStr);
         }
 
         private static int parseInt(String valStr) {
@@ -486,9 +487,9 @@ public final class ExcelFileFormatDocFunctionExtractor {
         }
         OutputStream os;
         try {
-            os = new FileOutputStream(outFile);
-        } catch (FileNotFoundException e) {
-            throw new RuntimeException(e);
+            os = Files.newOutputStream(outFile.toPath());
+        } catch (IOException e) {
+            throw new UncheckedIOException(e);
         }
         os = new SimpleAsciiOutputStream(os);
         PrintStream ps;
@@ -559,7 +560,7 @@ public final class ExcelFileFormatDocFunctionExtractor {
 
         byte[]buf = new byte[2048];
         try {
-            InputStream is = new FileInputStream(f);
+            InputStream is = Files.newInputStream(f.toPath());
             while(true) {
                 int bytesRead = is.read(buf);
                 if(bytesRead<1) {
@@ -578,8 +579,8 @@ public final class ExcelFileFormatDocFunctionExtractor {
     private static File downloadSourceFile() {
         URL url;
         try {
-            url = new URL("http://sc.openoffice.org/" + SOURCE_DOC_FILE_NAME);
-        } catch (MalformedURLException e) {
+            url = new URI("http://sc.openoffice.org/" + SOURCE_DOC_FILE_NAME).toURL();
+        } catch (MalformedURLException | URISyntaxException e) {
             throw new RuntimeException(e);
         }
 
@@ -590,7 +591,7 @@ public final class ExcelFileFormatDocFunctionExtractor {
             InputStream is = conn.getInputStream();
             System.out.println("downloading " + url.toExternalForm());
             result = TempFile.createTempFile("excelfileformat", ".odt");
-            OutputStream os = new FileOutputStream(result);
+            OutputStream os = Files.newOutputStream(result.toPath());
             while(true) {
                 int bytesRead = is.read(buf);
                 if(bytesRead<1) {
@@ -601,7 +602,7 @@ public final class ExcelFileFormatDocFunctionExtractor {
             is.close();
             os.close();
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            throw new UncheckedIOException(e);
         }
         System.out.println("file downloaded ok");
         return result;
